--- a/contact.html
+++ b/contact.html
@@ -39,12 +39,12 @@
             <div class="card">
                 <h3>Contact Information</h3>
                 <div style="margin: 2rem 0;">
-                    <p style="margin-bottom: 1rem;"><strong>📧 Email:</strong> siddesh.jain@gmail.com</p>
+                    <p style="margin-bottom: 1rem;"><strong>📧 Email:</strong> siddesh25jain@gmail.com</p>
                     <p style="margin-bottom: 1rem;"><strong>📞 Phone:</strong> +91 6265376721</p>
                     <p style="margin-bottom: 1rem;"><strong>📍 Address:</strong> Neelbad, Bhopal, Billabong</p>
                 </div>
                 
-                <h4 style="margin-top: 2rem; margin-bottom: 1rem;">Office Hours</h4>
+                <h4 style="margin-top: 2rem; margin-bottom: 1rem;">Timings for responding</h4>
                 <p>Monday - Friday: 9:00 AM - 6:00 PM</p>
                 <p>Saturday: 10:00 AM - 4:00 PM</p>
                 <p>Sunday: Closed</p>
