--- a/index.html
+++ b/index.html
@@ -119,10 +119,34 @@
   </section>
 
   <!-- Voices of Change -->
-  <section class="section">
-    <h2 class="section-title">Voices of Change</h2>
-    <p>Meet inspiring peace advocates around the world who dedicate their lives to harmony and community building.</p>
-  </section>
+<section class="section">
+  <h2 class="section-title">Voices of Change</h2>
+  <p>Meet inspiring peace advocates around the world who dedicate their lives to harmony and community building.</p>
+  <div class="grid grid-3">
+    <div class="card">
+      <div class="card-content">
+        <h3 class="card-title">Maria Rodriguez</h3>
+        <p class="card-text">Mexico City, Mexico</p>
+        <p class="card-text">Maria leads grassroots initiatives to bring young people together for peace dialogues in urban communities. She focuses on education, inclusion, and equality.</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-content">
+        <h3 class="card-title">David Chen</h3>
+        <p class="card-text">Singapore</p>
+        <p class="card-text">David is an advocate for youth empowerment and has launched regional workshops to equip young leaders with conflict-resolution skills.</p>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-content">
+        <h3 class="card-title">Amara Okafor</h3>
+        <p class="card-text">Lagos, Nigeria</p>
+        <p class="card-text">Amara works with women and children in conflict zones, providing safe spaces and education to foster understanding and rebuild trust.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <!-- Peace in Action -->
   <section class="section">
