--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     :root {
       --background: #000000;
       --foreground: #ffffff;
-      --primary: #00ffff;
+      --primary: #00bfff;
       --secondary: #84cc16;
       --font-glegoo: "Glegoo", serif;
       --font-open-sans: "Open Sans", sans-serif;
@@ -23,23 +23,50 @@
       margin: 0;
       padding: 0;
       color: var(--foreground);
+      background-color: var(--background);
     }
 
-    /* Navbar */
+    /* ===== Navbar (Mission Page Style) ===== */
     .navigation {
       position: fixed;
       top: 0; left: 0; right: 0;
-      background: rgba(0,0,0,0.9);
-      backdrop-filter: blur(10px);
+      background: #000;
+      z-index: 1000;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
       padding: 1rem 2rem;
-      display: flex; justify-content: space-between; align-items: center;
-      z-index: 100;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
-    .nav-logo { color: var(--primary); font-family: var(--font-glegoo); font-size: 1.5rem; font-weight: bold; text-shadow: 0 0 10px var(--primary); }
-    .nav-links { list-style: none; display: flex; gap: 2rem; margin: 0; }
-    .nav-links a { color: var(--foreground); text-decoration: none; transition: color 0.3s; font-size: 0.9rem; text-transform: lowercase; }
-    .nav-links a:hover { color: var(--primary); text-shadow: 0 0 10px var(--primary); }
+    .nav-logo {
+      color: #fff;
+      font-family: var(--font-glegoo);
+      font-weight: 900;
+      font-size: 1.5rem;
+      text-decoration: none;
+      text-shadow: 0 0 10px var(--primary);
+    }
+
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 1.5rem;
+      margin: 0;
+    }
+
+    .nav-links a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+      transition: all 0.3s ease;
+      text-transform: capitalize; /* Capitalize first letter */
+    }
+
+    .nav-links a:hover {
+      color: var(--primary);
+      text-shadow: 0 0 10px var(--primary);
+    }
 
     /* Hero Section */
     .hero {
@@ -47,16 +74,15 @@
       position: relative;
       background: url("00028.png") no-repeat center center fixed;
       background-size: cover;
+      display: flex;
+      align-items: flex-start; /* top alignment */
+      justify-content: center;
+      text-align: center;
+      padding-top: 6rem; /* space for fixed navbar */
     }
 
     .hero-content {
-      position: relative;
-      z-index: 10;
-      text-align: center;
-      color: #000000;
-      top: 30%; /* moved up a bit */
-      transform: translateY(-35%);
-      transition: transform 0.3s, font-size 0.4s;
+      max-width: 800px;
     }
 
     .hero-title { 
@@ -64,26 +90,55 @@
       font-size: 4rem; 
       font-weight: bold; 
       text-shadow: 0 0 20px var(--primary), 0 0 40px var(--secondary); 
-      transition: font-size 0.3s, letter-spacing 0.3s, transform 0.3s;
-    }
-    .hero-subtitle { 
-      font-size: 1.35rem; 
-      margin: 1rem auto; 
-      max-width: 600px; 
-      transition: opacity 0.3s; 
-      font-weight: 800; /* bolder subtitle */
+      margin-top: -2rem; /* heading stays near top */
+      color: #fff;
     }
 
-    .hero-button { background: linear-gradient(135deg, var(--primary), var(--secondary)); color: #000; padding: 1rem 2rem; border: none; border-radius: 8px; font-weight: bold; text-decoration: none; margin-top: 1rem; display: inline-block; }
+    .hero-subtitle { 
+      font-size: 1.8rem; 
+      margin-top: 10.6rem; /* move paragraph down */
+      margin-bottom: 2rem;
+      max-width: 600px; 
+      font-weight: 700; 
+      color: #000; /* bold black */
+    }
+
+    .hero-button {
+      background: linear-gradient(135deg, var(--primary), var(--secondary));
+      color: #000;
+      padding: 1rem 2rem;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      text-decoration: none;
+      margin-top: 3rem; /* move button further down */
+      display: inline-block;
+    }
 
     /* Section Styling */
-    .section { padding: 5rem 2rem; text-align: center; background: rgba(0,0,0,0.85); }
-    .section-title { font-size: 3rem; margin-bottom: 2rem; text-shadow: 0 0 20px var(--primary); color: var(--primary); }
+    .section {
+      padding: 5rem 2rem;
+      text-align: center;
+      background: rgba(0,0,0,0.85);
+    }
+
+    .section-title {
+      font-size: 3rem;
+      margin-bottom: 2rem;
+      text-shadow: 0 0 20px var(--primary);
+      color: var(--primary);
+    }
 
     .grid { display: grid; gap: 2rem; }
     .grid-3 { grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); }
-    .card { background: rgba(0,0,0,0.7); border-radius: 8px; overflow: hidden; text-align: left; }
-    .card img { width: 100%; display: block; }
+
+    .card {
+      background: rgba(0,0,0,0.7);
+      border-radius: 8px;
+      overflow: hidden;
+      text-align: left;
+    }
+
     .card-content { padding: 1rem; }
     .card-title { font-size: 1.3rem; font-weight: bold; color: var(--foreground); }
     .card-text { font-size: 0.95rem; color: #ccc; }
@@ -91,13 +146,20 @@
     .videos { display: flex; justify-content: center; margin-top: 2rem; }
     .videos iframe { width: 80%; max-width: 800px; height: 450px; border-radius: 8px; }
 
-    footer { background: #000; color: #aaa; text-align: center; padding: 1rem; font-size: 0.9rem; margin-top: 0; }
+    footer {
+      background: #000;
+      color: #aaa;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      margin-top: 0;
+    }
   </style>
 </head>
 <body>
   <!-- Navigation -->
   <nav class="navigation">
-    <div class="nav-logo">Voice for Peace</div>
+    <a href="index.html" class="nav-logo">Voice for Peace</a>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
@@ -119,34 +181,33 @@
   </section>
 
   <!-- Voices of Change -->
-<section class="section">
-  <h2 class="section-title">Voices of Change</h2>
-  <p>Meet inspiring peace advocates around the world who dedicate their lives to harmony and community building.</p>
-  <div class="grid grid-3">
-    <div class="card">
-      <div class="card-content">
-        <h3 class="card-title">Maria Rodriguez</h3>
-        <p class="card-text">Mexico City, Mexico</p>
-        <p class="card-text">Maria leads grassroots initiatives to bring young people together for peace dialogues in urban communities. She focuses on education, inclusion, and equality.</p>
+  <section class="section">
+    <h2 class="section-title">Voices of Change</h2>
+    <p>Meet inspiring peace advocates around the world who dedicate their lives to harmony and community building.</p>
+    <div class="grid grid-3">
+      <div class="card">
+        <div class="card-content">
+          <h3 class="card-title">Maria Rodriguez</h3>
+          <p class="card-text">Mexico City, Mexico</p>
+          <p class="card-text">Maria leads grassroots initiatives to bring young people together for peace dialogues in urban communities. She focuses on education, inclusion, and equality.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-content">
+          <h3 class="card-title">David Chen</h3>
+          <p class="card-text">Singapore</p>
+          <p class="card-text">David is an advocate for youth empowerment and has launched regional workshops to equip young leaders with conflict-resolution skills.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-content">
+          <h3 class="card-title">Amara Okafor</h3>
+          <p class="card-text">Lagos, Nigeria</p>
+          <p class="card-text">Amara works with women and children in conflict zones, providing safe spaces and education to foster understanding and rebuild trust.</p>
+        </div>
       </div>
     </div>
-    <div class="card">
-      <div class="card-content">
-        <h3 class="card-title">David Chen</h3>
-        <p class="card-text">Singapore</p>
-        <p class="card-text">David is an advocate for youth empowerment and has launched regional workshops to equip young leaders with conflict-resolution skills.</p>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-content">
-        <h3 class="card-title">Amara Okafor</h3>
-        <p class="card-text">Lagos, Nigeria</p>
-        <p class="card-text">Amara works with women and children in conflict zones, providing safe spaces and education to foster understanding and rebuild trust.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
+  </section>
 
   <!-- Peace in Action -->
   <section class="section">
@@ -157,7 +218,6 @@
       <div class="card"><div class="card-content"><h3 class="card-title">Global Impact</h3><p class="card-text">Worldwide initiatives creating lasting peace.</p></div></div>
     </div>
 
-    <!-- Centered Video -->
     <div class="videos">
       <iframe src="https://www.youtube.com/embed/2OEL4P1Rz04" frameborder="0" allowfullscreen></iframe>
     </div>
