--- a/about.html
+++ b/about.html
@@ -10,84 +10,62 @@
 
 <style>
 :root {
-    --background: #fdfdf9;   /* off-white */
-    --text: #000000;          /* black font */
-    --primary: #00ffff;       /* aqua glow */
-    --secondary: #228B22;     /* forest green */
-    --font-glegoo: "Glegoo", serif;
-    --font-open-sans: "Open Sans", sans-serif;
+    --primary: #00bfff;
+    --secondary: #84cc16;
+    --tertiary: #3b82f6;
+    --background: #fdfdf9;
+    --text-color: #1a1a1a;
+    --card-bg: #ffffff;
 }
 
+/* ===== Body ===== */
 body {
-    background: var(--background);
-    color: var(--text);
-    font-family: var(--font-open-sans);
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', 'Open Sans', sans-serif;
+    background-color: var(--background);
+    color: var(--text-color);
     overflow-x: hidden;
 }
 
-/* Floating background icons */
-.background {
-    position: fixed;
-    inset: 0;
-    overflow: hidden;
-    z-index: -2;
-}
-.floating-element {
-    position: absolute;
-    animation: float 6s infinite ease-in-out;
-}
-@keyframes float {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-20px); }
-}
-
-/* Navbar */
+/* ===== Navbar ===== */
 .nav {
-    background: rgba(253,253,249,0.95);
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    padding: 1rem 2rem;
     position: fixed;
-    top: 0; left: 0; right: 0;
-    z-index: 100;
+    width: 100%;
+    background: #000;
+    z-index: 1000;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 .nav-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 1rem 2rem;
 }
 .nav-logo {
-    font-family: var(--font-glegoo);
+    color: #fff;
+    font-weight: 900;
     font-size: 1.5rem;
-    font-weight: bold;
-    color: var(--text);
-    text-shadow: 0 0 10px var(--primary), 0 0 20px var(--secondary);
     text-decoration: none;
 }
 .nav-links {
     list-style: none;
     display: flex;
     gap: 1.5rem;
-    margin: 0;
-    padding: 0;
 }
 .nav-links a {
+    color: #fff;
     text-decoration: none;
-    color: var(--text);
-    font-size: 0.9rem;
     font-weight: 600;
-    text-transform: lowercase;
-    transition: color 0.3s, text-shadow 0.3s;
+    transition: all 0.3s ease;
 }
 .nav-links a:hover {
     color: var(--primary);
-    text-shadow: 0 0 10px var(--primary), 0 0 15px var(--secondary);
 }
 
-/* Sections */
+/* ===== Sections ===== */
 .section {
-    padding: 6rem 2rem 3rem;
+    padding: 8rem 2rem 3rem;
     max-width: 1100px;
     margin: auto;
 }
@@ -95,10 +73,11 @@ body {
     text-align: center;
     font-size: 2.5rem;
     margin-bottom: 2rem;
-    font-family: var(--font-glegoo);
+    font-family: 'Glegoo', serif;
     text-shadow: 0 0 8px var(--primary), 0 0 12px var(--secondary);
 }
 
+/* ===== Cards ===== */
 .grid {
     display: grid;
     gap: 2rem;
@@ -107,15 +86,14 @@ body {
 .grid-3 { grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); }
 
 .card {
-    background: #fff;
+    background-color: var(--card-bg);
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.08);
     padding: 1.5rem;
 }
 .card h2, .card h3 {
-    margin-top: 0;
-    font-family: var(--font-glegoo);
-    color: var(--text);
+    font-family: 'Glegoo', serif;
+    color: var(--text-color);
     text-shadow: 0 0 6px var(--primary), 0 0 10px var(--secondary);
 }
 .card p {
@@ -124,7 +102,7 @@ body {
 }
 .text-center { text-align: center; }
 
-/* CTA Buttons */
+/* ===== CTA Buttons ===== */
 .cta {
     text-align: center;
     margin-top: 4rem;
@@ -135,7 +113,7 @@ body {
 }
 .cta h2 {
     font-size: 2rem;
-    font-family: var(--font-glegoo);
+    font-family: 'Glegoo', serif;
     margin-bottom: 1rem;
     text-shadow: 0 0 8px var(--primary), 0 0 12px var(--secondary);
 }
@@ -160,11 +138,11 @@ body {
 .btn-primary {
     background: var(--primary);
     color: #000;
-    box-shadow: 0 0 12px rgba(0,255,255,0.6);
+    box-shadow: 0 0 12px rgba(0,191,255,0.6);
 }
 .btn-primary:hover {
     background: #00e6e6;
-    box-shadow: 0 0 20px rgba(0,255,255,0.9);
+    box-shadow: 0 0 20px rgba(0,191,255,0.9);
 }
 .btn-secondary {
     border: 2px solid #000;
@@ -175,6 +153,22 @@ body {
     border-color: var(--primary);
     color: var(--primary);
     text-shadow: 0 0 8px var(--primary);
+}
+
+/* ===== Floating icons ===== */
+.background {
+    position: fixed;
+    inset: 0;
+    overflow: hidden;
+    z-index: -2;
+}
+.floating-element {
+    position: absolute;
+    animation: float 6s infinite ease-in-out;
+}
+@keyframes float {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-20px); }
 }
 </style>
 </head>
@@ -195,13 +189,13 @@ body {
     <div class="nav-container">
         <a href="index.html" class="nav-logo">Voice for Peace</a>
         <ul class="nav-links">
-            <li><a href="index.html">home</a></li>
-            <li><a href="about.html">about</a></li>
-            <li><a href="mission.html">mission</a></li>
-            <li><a href="gallery.html">gallery</a></li>
-            <li><a href="resources.html">resources</a></li>
-            <li><a href="action.html">take action</a></li>
-            <li><a href="contact.html">contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="mission.html">Mission</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="action.html">Take Action</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
 </nav>
