--- a/gallery.html
+++ b/gallery.html
@@ -9,8 +9,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Glegoo:wght@400;700&family=Montserrat:wght@400;600;700;900&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 <style>
 :root {
-    --foreground: #000000;
-    --primary: #00ffff;
+    --foreground: #fff;
+    --primary: #00bfff;
     --secondary: #84cc16;
     --font-glegoo: "Glegoo", serif;
     --font-open-sans: "Open Sans", sans-serif;
@@ -26,46 +26,43 @@ body {
     overflow-x: hidden;
 }
 
-/* Navbar */
+/* ===== Navbar from Mission page ===== */
 .nav {
     position: fixed;
-    top: 0; left: 0; right: 0;
-    background: rgba(0,0,0,0.85);
-    backdrop-filter: blur(10px);
-    padding: 1rem 2rem;
-    display: flex; justify-content: center;
-    z-index: 100;
+    width: 100%;
+    background: #000;
+    z-index: 1000;
+    box-shadow: 0 0 10px rgba(0,0,0,0.4);
 }
 .nav-container {
-    width: 100%;
-    max-width: 1200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 1rem 2rem;
 }
 .nav-logo {
     font-family: var(--font-glegoo);
     color: var(--primary);
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: 900;
+    text-decoration: none;
     text-shadow: 0 0 10px var(--primary);
 }
 .nav-links {
     list-style: none;
     display: flex;
-    gap: 2rem;
+    gap: 1.5rem;
     margin: 0;
 }
 .nav-links a {
     color: #fff;
     text-decoration: none;
-    transition: color 0.3s;
-    font-size: 0.9rem;
-    text-transform: lowercase;
+    font-weight: 600;
+    transition: all 0.3s ease;
 }
 .nav-links a:hover {
     color: var(--primary);
-    text-shadow: 0 0 10px var(--primary);
+    text-shadow: 0 0 8px var(--primary);
 }
 
 /* Floating elements */
@@ -91,8 +88,6 @@ body {
     padding-top: 8rem;
     padding-bottom: 4rem;
     text-align: center;
-    backdrop-filter: brightness(0.85);
-    color: var(--foreground);
 }
 .section-title {
     font-family: var(--font-glegoo);
@@ -121,6 +116,12 @@ body {
     box-shadow: 0 5px 20px rgba(0,0,0,0.2);
     transition: transform 0.3s, box-shadow 0.3s;
     cursor: pointer;
+    opacity: 0;
+    transform: translateY(20px);
+}
+.card.visible {
+    opacity: 1;
+    transform: translateY(0);
 }
 .card:hover {
     transform: translateY(-10px) scale(1.02);
@@ -136,25 +137,13 @@ body {
 }
 .card-content h3 {
     font-family: var(--font-glegoo);
-    color: var(--foreground);
+    color: #000;
     font-size: 1.3rem;
-    text-shadow: 0 0 5px var(--primary);
     margin-bottom: 0.5rem;
 }
 .card-content p {
     font-size: 0.95rem;
-    color: var(--foreground);
-}
-
-/* Smooth scroll reveal */
-.card {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: all 0.6s ease-out;
-}
-.card.visible {
-    opacity: 1;
-    transform: translateY(0);
+    color: #000;
 }
 
 /* Video Section */
@@ -191,15 +180,14 @@ body {
 </head>
 <body>
 
-<!-- Falling speaking emojis canvas -->
-<canvas id="emojiCanvas" style="position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1;"></canvas>
-
+<!-- Floating icons -->
 <div class="background">
-    <div class="floating-element" style="top: 20%; left: 10%; font-size: 4rem; color: rgba(0, 255, 255, 0.2);">☮</div>
+    <div class="floating-element" style="top: 20%; left: 10%; font-size: 4rem; color: rgba(0, 191, 255, 0.2);">☮</div>
     <div class="floating-element" style="top: 60%; right: 15%; font-size: 3rem; color: rgba(132, 204, 22, 0.3);">🕊</div>
     <div class="floating-element" style="bottom: 30%; left: 20%; font-size: 3.5rem; color: rgba(59, 130, 246, 0.25);">🌍</div>
 </div>
 
+<!-- Navbar (Mission style) -->
 <nav class="nav">
     <div class="nav-container">
         <a href="index.html" class="nav-logo">Voice for Peace</a>
@@ -248,43 +236,6 @@ body {
     };
     window.addEventListener('scroll', revealCards);
     window.addEventListener('load', revealCards);
-
-    // Falling speaking emojis effect
-    const canvas = document.getElementById('emojiCanvas');
-    const ctx = canvas.getContext('2d');
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-
-    const emojis = [];
-    for(let i=0; i<50; i++){
-        emojis.push({
-            x: Math.random()*canvas.width,
-            y: Math.random()*canvas.height,
-            size: Math.random()*30+20,
-            speed: Math.random()*1 + 0.5,
-            alpha: Math.random()*0.6+0.4
-        });
-    }
-
-    function drawEmojis(){
-        ctx.clearRect(0,0,canvas.width,canvas.height);
-        emojis.forEach(e => {
-            ctx.font = `${e.size}px Arial`;
-            ctx.fillStyle = `rgba(0,255,255,${e.alpha})`;
-            ctx.fillText('🌱', e.x, e.y);
-            ctx.fillText('', e.x, e.y);
-
-            e.y += e.speed;
-            if(e.y > canvas.height + 50) e.y = -50;
-        });
-        requestAnimationFrame(drawEmojis);
-    }
-    drawEmojis();
-
-    window.addEventListener('resize', () => {
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-    });
 </script>
 
 </body>
