--- a/resources.html
+++ b/resources.html
@@ -11,7 +11,7 @@
 :root {
     --bg-color: #f0f0f3;
     --card-bg: #ffffff;
-    --primary: #0071e3;
+    --primary: #00bfff;
     --font-color: #1d1d1f;
 }
 
@@ -23,44 +23,45 @@ body {
     overflow-x: hidden;
 }
 
-/* Navbar */
-nav {
+/* ===== Navbar (Mission page style) ===== */
+.nav {
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
-    background: rgba(255,255,255,0.95);
-    box-shadow: 0 1px 10px rgba(0,0,0,0.05);
-    display: flex;
-    justify-content: center;
-    z-index: 100;
-    padding: 1rem 2rem;
+    background: #000;
+    z-index: 1000;
+    box-shadow: 0 0 10px rgba(0,0,0,0.4);
 }
 .nav-container {
-    width: 100%;
-    max-width: 1200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 1rem 2rem;
 }
 .nav-logo {
     font-family: 'Glegoo', serif;
-    font-size: 1.6rem;
-    font-weight: bold;
     color: var(--primary);
+    font-size: 1.5rem;
+    font-weight: 900;
+    text-decoration: none;
+    text-shadow: 0 0 10px var(--primary);
 }
 .nav-links {
+    list-style: none;
     display: flex;
-    gap: 2rem;
+    gap: 1.5rem;
+    margin: 0;
 }
 .nav-links a {
-    color: var(--font-color);
+    color: #fff;
     text-decoration: none;
-    font-weight: 500;
-    transition: color 0.3s;
+    font-weight: 600;
+    transition: all 0.3s ease;
 }
 .nav-links a:hover {
     color: var(--primary);
+    text-shadow: 0 0 8px var(--primary);
 }
 
 /* Section */
@@ -117,7 +118,7 @@ nav {
     left: -10px;
     width: calc(100% + 20px);
     height: calc(100% + 20px);
-    background: radial-gradient(circle, rgba(0,113,227,0.2) 0%, rgba(0,255,132,0.15) 70%, transparent 100%);
+    background: radial-gradient(circle, rgba(0,191,255,0.2) 0%, rgba(0,255,132,0.15) 70%, transparent 100%);
     border-radius: 25px;
     opacity: 0;
     transition: opacity 0.3s, transform 0.3s;
@@ -193,18 +194,19 @@ nav {
 <!-- Falling Books Background -->
 <div class="background-books"></div>
 
-<nav>
+<!-- Navbar (Mission style) -->
+<nav class="nav">
     <div class="nav-container">
-        <div class="nav-logo">Voice for Peace</div>
-        <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="mission.html">Mission</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="resources.html">Resources</a>
-            <a href="action.html">Take Action</a>
-            <a href="contact.html">Contact</a>
-        </div>
+        <a href="index.html" class="nav-logo">Voice for Peace</a>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="mission.html">Mission</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="resources.html">Resources</a></li>
+            <li><a href="action.html">Take Action</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </div>
 </nav>
 
