--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
             <div class="card">
                 <h3>Contact Information</h3>
                 <div style="margin: 2rem 0;">
-                    <p style="margin-bottom: 1rem;"><strong>📧 Email:</strong> siddesh.jain@gmail.com</p>
+                    <p style="margin-bottom: 1rem;"><strong>📧 Email:</strong> siddesh25jain@gmail.com</p>
                     <p style="margin-bottom: 1rem;"><strong>📞 Phone:</strong> +91 6265376721</p>
                     <p style="margin-bottom: 1rem;"><strong>📍 Address:</strong> Neelbad, Bhopal, Billabong</p>
                 </div>
